[project]
name = "agno-langfuse-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.20",
    "fastapi>=0.127.0",
    "langfuse>=3.11.1",
    "openai>=2.14.0",
    "openlit>=1.26.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
]
