[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agno-langfuse-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.7",
    "fastapi>=0.127.0",
    "gradio>=6.5.1",
    "langfuse>=3.11.1,<4.0.0",
    "openai>=2.16.0",
    "openlit>=1.26.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
    "xet>=1.3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core", "src/frontend", "src/tools", "src/workflows"]
